# agent-IA-especialista-insights

./: .dockerignore  .gitignore  Dockerfile  README.md  interface.py  pyproject.toml  testes.http
app/: config.py  main.py  prompts.py  tools.py  utils.py
scripts/: deploy.py  deploy.sh
